Update 3. FINAL sql-coursera-for-Github.ipynb

--- a/3. FINAL sql-coursera-for-Github.ipynb
+++ b/3. FINAL sql-coursera-for-Github.ipynb
@@ -114,7 +114,7 @@
     "db = mysql.connector.connect(\n",
     "    host=\"coursera-database-1.c9xxnmoy6azd.eu-west-1.rds.amazonaws.com\",\n",
     "    user=\"admin\",\n",
-    "    passwd=\"L3arn2Ea$n\",\n",
+    "    passwd=\"xxxxxx\",\n",
     "    database=\"Week4\"\n",
     "    )\n",
     "\n",
